# microservice-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: cli.yaml  main.rs
proto/: microservice.capnp
src/: build.rs  cli.yaml  errors.rs  lib.rs  main.rs  rpc.rs
tests/: certificate.der  certificate.pfx  lib.rs
